src/style.css
/* ... */
.return-to-top span:before {
  content: '';
  position: absolute;
  left: 32%;
  top: -1em;

  font-size: 2em;
}

.return-to-top:after {
  position: absolute;
  bottom: 5%;
  left: 0;
  display: block;
  content: '';
  height: 100%;
  width: 100%;
  z-index: 500;

  background: white;
}

/* course-index, course-page contexts */
.course-index > header {
  display: none;
}

.course-index > footer {
  /* display: none; */
}

.course-page > header {
  display: none;
}

.course-page > footer {
  /* display: none; */
}

.course-embedded > header {
  display: none;
}

.course-embedded > footer {
  display: none;
}

.course-embedded nav.breadcrumbs ul, .course-page nav.breadcrumbs ul, .course-index nav.breadcrumbs ul {
  display: flex;
  margin: 0;
  justify-content: space-between;

  list-style: none;
  text-align: left;
  font-size: .9em;
}

.course-embedded nav.breadcrumbs ul li:after, .course-page nav.breadcrumbs ul li:after, .course-index nav.breadcrumbs ul li:after {
  content: '>';
  padding: 0 .5em;
}

.course-embedded nav.breadcrumbs ul li:last-child:after, .course-page nav.breadcrumbs ul li:last-child:after, .course-index nav.breadcrumbs ul li:last-child:after {
  display: none;
}

.course-page details {
  margin-bottom: 2em;

  font-family: 'Source Sans Pro';
  border: 2px solid var(--vocabulary-neutral-color-lighter-gray);
  border-radius: 5px;
}

.course-page details:open summary {
  margin-bottom: 1em;
}

.course-page summary {
  padding: .2em .5em;

  background: var(--vocabulary-neutral-color-lighter-gray);

  font-size: 1.2em;
}

.course-page summary:hover {
  cursor: pointer;
}

.course-page summary::marker {
  font-size: .8em;
}

.course-page details ul {
  margin-left: 2em;
}

.course-page details ul li {
  line-height: 1.8;
}

/* pidgin specific patches */

body > article.attention {
  grid-column: 2/11;
  display: grid;
  grid-template-columns: 60% 40%;
  margin-bottom: 2em;
  padding: 1em;
  position: relative;

  background:#F5F5F5;
  background: #E0FF00;
  border: 4px solid black;
  border-radius: 16px;
}

body > article.attention:before {
  display: inline-block;
  content: '';
  height: 1.5em;
  width: 1.5em;
  position: absolute;
  top: -1em;
  right: 2em;
  z-index: 5;

  background:#F5F5F5;
  background:#E0FF00;
  border-top: 4px solid black;
  border-right: 4px solid black;

  transform: rotate(-45deg);
}

body > article.attention div {
  grid-column: span 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 1em 2em 2em 2em;
}

body > article.attention figure img {
  width: 100%;
}

body > article.attention h2 {
  margin-bottom: 0;

  font-family: "DM Sans";
  font-size: 1.8em;
  line-height: 1.5;
  text-align: left;
}

body > article.attention p {
  font-size: 1.4em;
  /* margin-bottom: 1em; */
}

body > article.attention a {
  --underline-background-color:black;
  display: inline-block;
  margin-top: 1em;
  padding: .6em 1.6em;

  font-family: "DM Sans";
  font-weight: 700;
  font-size: 1em;
  color: white;
  background:black;
  border-radius: 60px;
  text-transform: capitalize;
  box-sizing: border-box;
  border: 4px solid transparent;
  text-decoration: none;
}

body > article.attention a:hover {
  --underline-background-color:white;
  background: white;

  color: black;
  border-color: black;
}

main > header figure {
  height: auto;
  background: transparent;
  overflow: visible;
  border: transparent;
}

main h3, main h4, main h5, main h6 {
  font-family: "DM Sans";
}

main h4 {
  font-size: 1.5em;
}

main h5 {
  font-size: 1.4em;
}

main h6 {
  font-size: 1.3em;
}


article.topic-summary p a {
  --underline-background-color: none;

  display: inline;

  background: none;
  border: none;
  margin: 0;
  padding: 0;
  color: inherit;

  font-size: 1em;
  font-weight: 400;
  text-transform: none;

  color:#2E1FB8;
  text-decoration: underline;

}

.blog-index main > header figcaption p {
  text-align: right;
}

.blog-index main .post.featured {
  margin-top: 3em;
}

.blog-post main > header figcaption p {
  text-align: right;
}

.events-index main > header > figure {
  height: auto;

  background: transparent;
}

.events-index .topic-summary.about {
  grid-template-columns: 60% 40%;
  gap: 1em;
}

.events-index .topic-summary.about .description {
  display: flex;
  align-items: center;
}

.events-index .topic-summary.about .description p {
  font-size: 1.6em;
}

.events-index .event figure {
  background: transparent;
  height: auto;
}

.events-index .event figure img {
  border-radius: 16px;
}

.events-index .event {
  margin-bottom: 8em;
}

.event-post main > header figure {
  height: auto;

  background: transparent;
}

.event-post .content .speakers .speaker figure img {
  border-radius: 100px;
}

.event-post .content .speakers .speaker h4 {
  color: black;
}

.event-post .content .speakers .speaker h3 a:hover {
  color:#FF0000;
}

.event-post main footer nav ul {
  justify-content: center;
}

.casestudies-index .topic-summary.about {
  grid-template-columns: 35% 60%;
  gap: 4em;
  box-sizing: border-box;
}

.casestudies-index .topic-summary.about .description {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.casestudies-index .topic-summary.about .description p {
  font-size: 1.6em;
  margin-bottom: 0;
}

 
.home-narrative article.topic-summary.focus-area:nth-of-type(even) figure {
    order: -1;
}

.home-narrative article.topic-summary.focus-area:nth-of-type(odd) figure {
    order: inherit;
}

.home-narrative article.topic-summary.about {
    grid-template-columns: 1fr 2fr;
    gap: 4em;
    margin-bottom: 4.5em;
}

.home-narrative article.topic-summary.about .description {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.home-narrative article.topic-summary.about .description p {
    margin: 0;
    margin-top: 1.1em;
}

.home-narrative article.topic-summary.focus-area figure {
  width: auto;
  height: auto;
  background: transparent;
}
/* ... */

